fixed dark mode

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,22 @@
     margin: 0;
     padding: 0;
 }
+body {
+    --text-color: #1C1E21;
+    --bkg-color1: #e4e6eb;
+    --bkg-color2: #fff;
+    --bkg-img: linear-gradient(to bottom, rgba(255, 255, 255, 0.85), rgba(255, 255, 255, 0.85)),
+    url("/img/loginBG.jpg");
+}
+
+body.dark-theme {
+    --text-color: #E4E6EB;
+    --bkg-color1: #16171a;
+    --bkg-color2: #323437;
+    --bkg-img: linear-gradient(to bottom, rgba(0,0,0, 0.90), rgba(0,0,0, 0.90)),
+    url("/img/loginBG.jpg");       
+}
+
 
 #mainPage {
     height: 100vh;
@@ -104,7 +120,7 @@ p {
 @media (prefers-color-scheme: dark) {
 
     /* defaults to dark theme */
-    body.dark-theme {
+    body {
         --text-color: #E4E6EB;
         --bkg-color1: #16171a;
         --bkg-color2: #323437;
